add new website from server na

--- a/xem-phim-bo/dem-toi-va-binh-minh/index.html
+++ b/xem-phim-bo/dem-toi-va-binh-minh/index.html
@@ -1196,7 +1196,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1743,18 +1743,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/x-men-lien-minh-di-nhan" title="X-Men: Liên Minh Dị Nhân">
+          <a class="list-top-movie-link" href="/phim-moi/web-tu-than" title="Web Tử Thần">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/x-men-lien-minh-di-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/web-tu-than-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             X-Men: Liên Minh Dị Nhân
+             Web Tử Thần
             </span>
             <span class="list-top-movie-item-en">
-             X-Men 2
+             Untraceable
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tro-choi-sinh-tu-diem-bat-dau-2" title="Trò chơi sinh tử: Điểm bắt đầu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-sinh-tu-diem-bat-dau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Trò chơi sinh tử: Điểm bắt đầu
+            </span>
+            <span class="list-top-movie-item-en">
+             No Game, No Life the Movie: Zero
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/biggie-toi-co-chuyen-muon-ke" title="Biggie: Tôi có chuyện muốn kể">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biggie-toi-co-chuyen-muon-ke-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Biggie: Tôi có chuyện muốn kể
+            </span>
+            <span class="list-top-movie-item-en">
+             Biggie: I Got a Story to Tell
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hau-gai-rong-nha-kobayashi" title="Hầu gái rồng nhà Kobayashi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hau-gai-rong-nha-kobayashi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hầu gái rồng nhà Kobayashi
+            </span>
+            <span class="list-top-movie-item-en">
+             Kobayashi-san Chi no Maid Dragon, The maid dragon of Kobayashi-san
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1765,84 +1831,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tien-tri-tinh-yeu" title="Tiên Tri Tình Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/a-thousand-cuts" title="A Thousand Cuts">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-tri-tinh-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/a-thousand-cuts-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tiên Tri Tình Yêu
+             A Thousand Cuts
             </span>
             <span class="list-top-movie-item-en">
-             Madame Antoine
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vong-tay-cua-me-chong" title="Vòng Tay Của Mẹ Chồng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-tay-cua-me-chong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vòng Tay Của Mẹ Chồng
-            </span>
-            <span class="list-top-movie-item-en">
-             The Priceless
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/noi-ay-ta-gap-nhau" title="Nơi Ấy Ta Gặp Nhau">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noi-ay-ta-gap-nhau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nơi Ấy Ta Gặp Nhau
-            </span>
-            <span class="list-top-movie-item-en">
-             Wicker Park
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-drag-ra-doi" title="Nữ hoàng drag ra đời">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-drag-ra-doi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nữ hoàng drag ra đời
-            </span>
-            <span class="list-top-movie-item-en">
-             A Queen Is Born
+             A Thousand Cuts
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
