add new website from server na

--- a/xem-phim-bo/tang-hai-hoa/index.html
+++ b/xem-phim-bo/tang-hai-hoa/index.html
@@ -1196,7 +1196,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             44
+             45
             </dd>
             <br/>
            </dl>
@@ -1754,18 +1754,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hat-tao-nguoi-may-noi-day" title="Hạt Táo- Người Máy Nổi Dậy">
+          <a class="list-top-movie-link" href="/phim-moi/star-trek-vi-vung-dat-bi-an" title="Star Trek VI: Vùng đất bí ẩn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hat-tao-nguoi-may-noi-day-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-vi-vung-dat-bi-an-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hạt Táo- Người Máy Nổi Dậy
+             Star Trek VI: Vùng đất bí ẩn
             </span>
             <span class="list-top-movie-item-en">
-             Appleseed: Ex Machina
+             Star Trek VI: The Undiscovered Country
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sao-phai-nghi-phan-3" title="Sao phải nghĩ (Phần 3)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sao-phai-nghi-phan-3-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sao phải nghĩ (Phần 3)
+            </span>
+            <span class="list-top-movie-item-en">
+             One Day at a Time (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1776,87 +1798,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngay-le-cua-chang-phu-re" title="Ngày lễ của chàng phù rể">
+          <a class="list-top-movie-link" href="/phim-moi/de-che-phap-luat-quyen-cong-to" title="Đế Chế Pháp Luật – Quyền Công Tố">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-le-cua-chang-phu-re-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-che-phap-luat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngày lễ của chàng phù rể
+             Đế Chế Pháp Luật – Quyền Công Tố
             </span>
             <span class="list-top-movie-item-en">
-             The Best Man Holiday
+             The Empire
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/100-nguoi-thu-nghiem-phan-4" title="100 Người Thử Nghiệm (Phần 4)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/100-nguoi-thu-nghiem-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             100 Người Thử Nghiệm (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             The 100 (Season 4)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/song-chien" title="Song Chiến">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-chien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Song Chiến
+            </span>
+            <span class="list-top-movie-item-en">
+             Warriors Two
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-long-dai-duong" title="Song Long Đại Đường">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-long-dai-duong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Song Long Đại Đường
-            </span>
-            <span class="list-top-movie-item-en">
-             Twin of Brothers
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tan-diet" title="Tận Diệt">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-diet-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tận Diệt
-            </span>
-            <span class="list-top-movie-item-en">
-             Wyrmwood: Road Of The Dead
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bad-girlfriend" title="Bad Girlfriend">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bad-girlfriend-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bad Girlfriend
-            </span>
-            <span class="list-top-movie-item-en">
-             Bad Girlfriend
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
