add new website from server na

--- a/xem-phim-bo/luu-thuy-dieu-dieu/index.html
+++ b/xem-phim-bo/luu-thuy-dieu-dieu/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             25
+             26
             </dd>
             <br/>
            </dl>
@@ -1660,18 +1660,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vuong-giac-ca-mon" title="Vượng Giác Ca Môn">
+          <a class="list-top-movie-link" href="/phim-moi/tra-lai-tinh-yeu-cho-em" title="Trả Lại Tình Yêu Cho Em">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuong-giac-ca-mon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tra-lai-tinh-yeu-cho-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vượng Giác Ca Môn
+             Trả Lại Tình Yêu Cho Em
             </span>
             <span class="list-top-movie-item-en">
-             As Tears Go By
+             My Heart Will Go On
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1682,18 +1682,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/david-byrnes-american-utopia" title="David Byrne’s American Utopia">
+          <a class="list-top-movie-link" href="/phim-moi/vat-lon-den-cung" title="Vật lộn đến cùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/david-byrnes-american-utopia-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vat-lon-den-cung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             David Byrne’s American Utopia
+             Vật lộn đến cùng
             </span>
             <span class="list-top-movie-item-en">
-             David Byrne's American Utopia
+             The Ultimate Fight
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1704,18 +1704,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-bi-an-chua-loi-dap-phan-2" title="Những bí ẩn chưa lời đáp (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/lo-sau-su-that" title="Lỗ sâu sự thật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-bi-an-chua-loi-dap-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lo-sau-su-that-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những bí ẩn chưa lời đáp (Phần 2)
+             Lỗ sâu sự thật
             </span>
             <span class="list-top-movie-item-en">
-             Unsolved Mysteries (Season 2)
+             The Whole Truth
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1726,21 +1726,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-nhan-va-nguoi-doi-ke-thu-quoc-gia" title="Siêu Nhân và Người Dơi: Kẻ Thù Quốc Gia">
+          <a class="list-top-movie-link" href="/phim-moi/bau-troi-bao-la" title="Bàu Trời Bao La">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhan-va-nguoi-doi-ke-thu-quoc-gia-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-sky-is-everywhere-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu Nhân và Người Dơi: Kẻ Thù Quốc Gia
+             Bàu Trời Bao La
             </span>
             <span class="list-top-movie-item-en">
-             Superman - Batman: Public Enemies
+             The Sky Is Everywhere
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1748,21 +1748,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khach-bi-an" title="Khách bí ẩn">
+          <a class="list-top-movie-link" href="/phim-moi/my-little-old-boy" title="My Little Old Boy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-bi-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-little-old-boy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khách bí ẩn
+             My Little Old Boy
             </span>
             <span class="list-top-movie-item-en">
-             Mysterious visitor
+             미운 우리새끼
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
