add new website from server na

--- a/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
+++ b/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1777,18 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-san-bong-dem" title="Kẻ Săn Bóng Đêm">
+          <a class="list-top-movie-link" href="/phim-moi/ton-hai-vo-luan" title="Tổn Hại Vô Luân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-san-bong-dem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ton-hai-vo-luan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kẻ Săn Bóng Đêm
+             Tổn Hại Vô Luân
             </span>
             <span class="list-top-movie-item-en">
-             Keeper of Darkness
+             Damage
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1799,18 +1799,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-nan-tu-cam" title="Tình Nan Tự Cấm">
+          <a class="list-top-movie-link" href="/phim-moi/hop-dem-istanbul-phan-1" title="Hộp đêm Istanbul (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-nan-tu-cam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hop-dem-istanbul-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Nan Tự Cấm
+             Hộp đêm Istanbul (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Tình Khó Kiềm Chế - Lost You, Found You
+             The Club (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/jungle-run" title="Jungle Run">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jungle-run-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Jungle Run
+            </span>
+            <span class="list-top-movie-item-en">
+             Jungle Run
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/lua-va-nuoc" title="Lửa Và Nước">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lua-va-nuoc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Lửa Và Nước
+            </span>
+            <span class="list-top-movie-item-en">
+             Himizu
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1821,65 +1865,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khi-dan-ong-yeu" title="Khi đàn ông yêu">
+          <a class="list-top-movie-link" href="/phim-moi/ultraman" title="Ultraman">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-dan-ong-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ultraman-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khi đàn ông yêu
+             Ultraman
             </span>
             <span class="list-top-movie-item-en">
-             Man in Love
+             Ultraman
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bhakshak-toi-loi-lam-ngo" title="Bhakshak: Tội lỗi làm ngơ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bhakshak-toi-loi-lam-ngo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bhakshak: Tội lỗi làm ngơ
-            </span>
-            <span class="list-top-movie-item-en">
-             Bhakshak
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-sieu-nhien-phan-1" title="Thám tử siêu nhiên (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-sieu-nhien-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thám tử siêu nhiên (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Dirk Gently's Holistic Detective Agency (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
