add new website from server na

--- a/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
+++ b/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1777,18 +1777,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ton-hai-vo-luan" title="Tổn Hại Vô Luân">
+          <a class="list-top-movie-link" href="/phim-moi/attack-on-titan-crimson-bow-and-arrow" title="Attack on Titan: Crimson Bow and Arrow">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ton-hai-vo-luan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/attack-on-titan-crimson-bow-and-arrow-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tổn Hại Vô Luân
+             Attack on Titan: Crimson Bow and Arrow
             </span>
             <span class="list-top-movie-item-en">
-             Damage
+             Attack on Titan: Crimson Bow and Arrow
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thuong-hai-vinh-hoa-lac-loi" title="Thượng Hải, Vinh Hoa Lạc Lối">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuong-hai-vinh-hoa-lac-loi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thượng Hải, Vinh Hoa Lạc Lối
+            </span>
+            <span class="list-top-movie-item-en">
+             Shanghai Pioneering Story
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1799,18 +1821,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hop-dem-istanbul-phan-1" title="Hộp đêm Istanbul (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/dao-tinh-yeu-australia-phan-4" title="Đảo tình yêu Australia (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hop-dem-istanbul-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-tinh-yeu-australia-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hộp đêm Istanbul (Phần 1)
+             Đảo tình yêu Australia (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             The Club (Season 1)
+             Love Island Australia (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1821,40 +1843,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jungle-run" title="Jungle Run">
+          <a class="list-top-movie-link" href="/phim-moi/elsword-el-lady" title="Elsword: El Lady">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jungle-run-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/elsword-el-lady-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Jungle Run
+             Elsword: El Lady
             </span>
             <span class="list-top-movie-item-en">
-             Jungle Run
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lua-va-nuoc" title="Lửa Và Nước">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lua-va-nuoc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lửa Và Nước
-            </span>
-            <span class="list-top-movie-item-en">
-             Himizu
+             Elsword: El Lady
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1865,18 +1865,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ultraman" title="Ultraman">
+          <a class="list-top-movie-link" href="/phim-moi/mon-qua-giang-sinh" title="Món Quà Giáng Sinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ultraman-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mon-qua-giang-sinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ultraman
+             Món Quà Giáng Sinh
             </span>
             <span class="list-top-movie-item-en">
-             Ultraman
+             12 Gifts of Christmas
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
